--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <input type="number" placeholder="inserte un valor...">
-    <input type="number" placeholder="inserte un valor...">
-    <select name="" id="operacion">
+    <input type="number" placeholder="inserte un valor..." id="valor1">
+    <input type="number" placeholder="inserte un valor..." id="valor2">
+    <select name="" id="operaciones">
         <option value="sumar">sumar (+)</option>
         <option value="restar">restar (-)</option>
         <option value="multiplicar">multiplicar (*)</option>
